--- a/MyApplication/app/src/main/res/layout/activity_lbiot_savart.xml
+++ b/MyApplication/app/src/main/res/layout/activity_lbiot_savart.xml
@@ -31,7 +31,7 @@
                     android:layout_height="112dp"
                     android:layout_weight="1"
                     android:contentDescription="boton de regreso"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@drawable/flecha_izquierda" />
 
                 <TextView
                     android:id="@+id/textView21"
@@ -49,7 +49,7 @@
                     android:layout_height="116dp"
                     android:layout_weight="1"
                     android:contentDescription="Boton logo"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@drawable/ic_launcher_foreground" />
             </LinearLayout>
 
             <Space
@@ -70,7 +70,7 @@
                 android:id="@+id/imageView16"
                 android:layout_width="match_parent"
                 android:layout_height="162dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/ffbiot" />
 
             <Space
                 android:layout_width="match_parent"
@@ -241,7 +241,7 @@
                     android:layout_height="34dp" />
 
                 <TextView
-                    android:id="@+id/textView31"
+                    android:id="@+id/txt_res"
                     android:layout_width="221dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
