--- a/MyApplication/app/src/main/res/layout/activity_fmcorriente.xml
+++ b/MyApplication/app/src/main/res/layout/activity_fmcorriente.xml
@@ -30,7 +30,7 @@
                     android:layout_height="112dp"
                     android:layout_weight="1"
                     android:contentDescription="boton de regreso"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@drawable/flecha_izquierda" />
 
                 <TextView
                     android:id="@+id/textView21"
@@ -48,7 +48,7 @@
                     android:layout_height="116dp"
                     android:layout_weight="1"
                     android:contentDescription="Boton logo"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@drawable/ffcorriente" />
             </LinearLayout>
 
             <Space
@@ -69,7 +69,7 @@
                 android:id="@+id/imageView16"
                 android:layout_width="match_parent"
                 android:layout_height="162dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/ffcorriente" />
 
             <Space
                 android:layout_width="match_parent"
@@ -240,7 +240,7 @@
                     android:layout_height="34dp" />
 
                 <TextView
-                    android:id="@+id/textView31"
+                    android:id="@+id/txt_res"
                     android:layout_width="221dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
