--- a/MyApplication/app/src/main/res/layout/activity_lampere.xml
+++ b/MyApplication/app/src/main/res/layout/activity_lampere.xml
@@ -30,7 +30,7 @@
                     android:layout_height="112dp"
                     android:layout_weight="1"
                     android:contentDescription="boton de regreso"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@drawable/flecha_izquierda" />
 
                 <TextView
                     android:id="@+id/textView21"
@@ -48,7 +48,7 @@
                     android:layout_height="116dp"
                     android:layout_weight="1"
                     android:contentDescription="Boton logo"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@drawable/ic_launcher_foreground" />
             </LinearLayout>
 
             <Space
@@ -69,7 +69,7 @@
                 android:id="@+id/imageView16"
                 android:layout_width="match_parent"
                 android:layout_height="162dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/ffampere" />
 
             <Space
                 android:layout_width="match_parent"
@@ -91,11 +91,12 @@
                     android:text="dl:" />
 
                 <EditText
-                    android:id="@+id/txt_area"
+                    android:id="@+id/txt_dl"
                     android:layout_width="102dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:hint="DLongitud"
                     android:inputType="number|numberDecimal" />
 
                 <TextView
@@ -109,11 +110,12 @@
                     android:text="I:" />
 
                 <EditText
-                    android:id="@+id/txt_angulo"
+                    android:id="@+id/txt_corriente"
                     android:layout_width="131dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:hint="Corriente"
                     android:inputType="number|numberDecimal" />
             </LinearLayout>
 
@@ -127,8 +129,8 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView25"
-                    android:layout_width="53dp"
+                    android:id="@+id/lbl_campo"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -142,6 +144,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:hint="Campo"
                     android:inputType="number|numberDecimal" />
 
             </LinearLayout>
@@ -202,7 +205,7 @@
                     android:layout_height="34dp" />
 
                 <TextView
-                    android:id="@+id/textView31"
+                    android:id="@+id/txt_res"
                     android:layout_width="221dp"
                     android:layout_height="50dp"
                     android:layout_weight="1"
