--- a/MyApplication/app/src/main/res/layout/activity_flujo_magnetico.xml
+++ b/MyApplication/app/src/main/res/layout/activity_flujo_magnetico.xml
@@ -66,10 +66,10 @@
                 android:text="Formulas:" />
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/imageView4"
                 android:layout_width="match_parent"
-                android:layout_height="162dp"
-                tools:srcCompat="@drawable/fflujo" />
+                android:layout_height="128dp"
+                app:srcCompat="@drawable/fflujo" />
 
             <Space
                 android:layout_width="match_parent"
