--- a/MyApplication/app/src/main/res/layout/activity_formulas.xml
+++ b/MyApplication/app/src/main/res/layout/activity_formulas.xml
@@ -62,10 +62,10 @@
                 android:text="* F.M en Carga:" />
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/imageView17"
                 android:layout_width="match_parent"
-                android:layout_height="211dp"
-                tools:srcCompat="@drawable/ffmcarga" />
+                android:layout_height="235dp"
+                app:srcCompat="@drawable/ffmcarga" />
 
             <Space
                 android:layout_width="match_parent"
@@ -82,10 +82,10 @@
                 android:text="* F.M en Corriente::" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imageView18"
                 android:layout_width="match_parent"
-                android:layout_height="110dp"
-                tools:srcCompat="@drawable/ffcorriente" />
+                android:layout_height="113dp"
+                app:srcCompat="@drawable/ffcorriente" />
 
             <Space
                 android:layout_width="match_parent"
@@ -102,10 +102,10 @@
                 android:text="* Ley Biot-Savart::" />
 
             <ImageView
-                android:id="@+id/imageView11"
+                android:id="@+id/imageView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:srcCompat="@drawable/ffbiot" />
+                app:srcCompat="@drawable/ffbiot" />
 
             <Space
                 android:layout_width="match_parent"
@@ -122,10 +122,10 @@
                 android:text="* Ley Ampere:" />
 
             <ImageView
-                android:id="@+id/imageView12"
+                android:id="@+id/imageView11"
                 android:layout_width="match_parent"
-                android:layout_height="187dp"
-                tools:srcCompat="@drawable/ffampere" />
+                android:layout_height="211dp"
+                app:srcCompat="@drawable/ffampere" />
 
             <Space
                 android:layout_width="match_parent"
@@ -142,10 +142,10 @@
                 android:text="* Flujo magnético:" />
 
             <ImageView
-                android:id="@+id/imageView13"
+                android:id="@+id/imageView12"
                 android:layout_width="match_parent"
-                android:layout_height="103dp"
-                tools:srcCompat="@drawable/fflujo" />
+                android:layout_height="124dp"
+                app:srcCompat="@drawable/fflujo" />
 
             <Space
                 android:layout_width="match_parent"
@@ -162,10 +162,10 @@
                 android:text="* Helm-Holtz:" />
 
             <ImageView
-                android:id="@+id/imageView14"
+                android:id="@+id/imageView13"
                 android:layout_width="match_parent"
-                android:layout_height="188dp"
-                tools:srcCompat="@drawable/ffbobinas" />
+                android:layout_height="211dp"
+                app:srcCompat="@drawable/ffbobinas" />
 
             <Space
                 android:layout_width="match_parent"
