--- a/MyApplication/app/src/main/res/layout/activity_helm_holtz.xml
+++ b/MyApplication/app/src/main/res/layout/activity_helm_holtz.xml
@@ -26,11 +26,11 @@
 
                 <ImageButton
                     android:id="@+id/imgBtn_volver"
-                    android:layout_width="19dp"
-                    android:layout_height="112dp"
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:contentDescription="boton de regreso"
-                    tools:srcCompat="@drawable/flecha_izquierda" />
+                    android:contentDescription="Volver"
+                    app:srcCompat="@drawable/volver" />
 
                 <TextView
                     android:id="@+id/textView21"
@@ -42,13 +42,13 @@
                     android:scaleY="1.8"
                     android:text="Helm-Holtz" />
 
-                <ImageButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="35dp"
-                    android:layout_height="116dp"
+                <ImageView
+                    android:id="@+id/imageView22"
+                    android:layout_width="26dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:contentDescription="Boton logo"
-                    tools:srcCompat="@drawable/ic_launcher_foreground" />
+                    android:clickable="false"
+                    app:srcCompat="@android:drawable/sym_def_app_icon" />
             </LinearLayout>
 
             <Space
@@ -107,7 +107,7 @@
                     android:text="N:" />
 
                 <EditText
-                    android:id="@+id/txt_angulo"
+                    android:id="@+id/txt_espiras"
                     android:layout_width="131dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -125,7 +125,7 @@
                     android:text="I:" />
 
                 <EditText
-                    android:id="@+id/txt_area"
+                    android:id="@+id/txt_corriente"
                     android:layout_width="102dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -172,7 +172,7 @@
                     android:text="R:" />
 
                 <EditText
-                    android:id="@+id/txt_phi"
+                    android:id="@+id/txt_radio"
                     android:layout_width="102dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -185,27 +185,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="22dp" />
 
-            <LinearLayout
+            <Button
+                android:id="@+id/btn_calcular"
                 android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView25"
-                    android:layout_width="278dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:scaleX="2"
-                    android:scaleY="2"
-                    android:text="¿Qué desea calcular?" />
-
-                <Spinner
-                    android:id="@+id/cb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
+                android:layout_height="68dp"
+                android:text="Calcular" />
 
             <Space
                 android:layout_width="match_parent"
@@ -232,27 +216,13 @@
                 android:layout_height="100dp"
                 android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="14dp"
-                    android:layout_height="34dp" />
-
                 <TextView
-                    android:id="@+id/txt_res"
-                    android:layout_width="221dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:background="#BABABA"
-                    android:gravity="right|center_vertical"
-                    android:paddingLeft="100px" />
-
-                <TextView
-                    android:id="@+id/textView32"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:scaleX="2"
-                    android:scaleY="2" />
+                    android:id="@+id/txtCalculado"
+                    android:layout_width="match_parent"
+                    android:layout_height="59dp"
+                    android:text="0.0"
+                    android:textAlignment="center"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
