--- a/MyApplication/app/src/main/res/layout/activity_lampere.xml
+++ b/MyApplication/app/src/main/res/layout/activity_lampere.xml
@@ -26,11 +26,11 @@
 
                 <ImageButton
                     android:id="@+id/imgBtn_volver"
-                    android:layout_width="19dp"
-                    android:layout_height="112dp"
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:contentDescription="boton de regreso"
-                    tools:srcCompat="@drawable/flecha_izquierda" />
+                    android:contentDescription="Volver"
+                    app:srcCompat="@drawable/volver" />
 
                 <TextView
                     android:id="@+id/textView21"
@@ -42,13 +42,14 @@
                     android:scaleY="1.8"
                     android:text="Ley ampere" />
 
-                <ImageButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="35dp"
-                    android:layout_height="116dp"
+                <ImageView
+                    android:id="@+id/imageView23"
+                    android:layout_width="26dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:contentDescription="Boton logo"
-                    tools:srcCompat="@drawable/ic_launcher_foreground" />
+                    android:clickable="false"
+                    app:srcCompat="@android:drawable/sym_def_app_icon" />
+
             </LinearLayout>
 
             <Space
@@ -125,26 +126,26 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="62dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/lbl_campo"
+                    android:id="@+id/textView16"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:scaleX="2"
                     android:scaleY="2"
-                    android:text="B:" />
+                    android:text="r:" />
 
                 <EditText
-                    android:id="@+id/txt_campo"
-                    android:layout_width="140dp"
+                    android:id="@+id/txt_radio"
+                    android:layout_width="102dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:hint="Campo"
+                    android:hint="Radio"
                     android:inputType="number|numberDecimal" />
 
             </LinearLayout>
@@ -153,27 +154,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="22dp" />
 
-            <LinearLayout
+            <Button
+                android:id="@+id/btn_calcular"
                 android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView25"
-                    android:layout_width="278dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:scaleX="2"
-                    android:scaleY="2"
-                    android:text="¿Qué desea calcular?" />
-
-                <Spinner
-                    android:id="@+id/cb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
+                android:layout_height="68dp"
+                android:text="Calcular" />
 
             <Space
                 android:layout_width="match_parent"
@@ -200,28 +185,13 @@
                 android:layout_height="100dp"
                 android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="14dp"
-                    android:layout_height="34dp" />
-
                 <TextView
-                    android:id="@+id/txt_res"
-                    android:layout_width="221dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:background="#BABABA"
-                    android:gravity="right|center_vertical"
-                    android:paddingLeft="100px" />
-
-                <TextView
-                    android:id="@+id/textView32"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:scaleX="2"
-                    android:scaleY="2" />
-
+                    android:id="@+id/txtCalculado"
+                    android:layout_width="match_parent"
+                    android:layout_height="59dp"
+                    android:text="0.0"
+                    android:textAlignment="center"
+                    android:textSize="20sp" />
             </LinearLayout>
 
         </LinearLayout>
