--- a/MyApplication/app/src/main/res/layout/activity_opciones_magnetismo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_opciones_magnetismo.xml
@@ -6,107 +6,99 @@
     android:layout_height="match_parent"
     tools:context=".OpcionesMagnetismo">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/imgBtn_volver"
-                android:layout_width="19dp"
-                android:layout_height="112dp"
-                android:layout_weight="1"
-                android:contentDescription="boton de regreso"
-                tools:srcCompat="@tools:sample/avatars" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView21"
-                android:layout_width="155dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                <ImageButton
+                    android:id="@+id/imgBtn_volver"
+                    android:layout_width="8dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:contentDescription="Volver"
+                    app:srcCompat="@drawable/volver" />
+
+                <TextView
+                    android:id="@+id/textView21"
+                    android:layout_width="155dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:scaleX="1.8"
+                    android:scaleY="1.8"
+                    android:text="Magnetismo" />
+
+                <ImageView
+                    android:id="@+id/imageView24"
+                    android:layout_width="26dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="false"
+                    app:srcCompat="@android:drawable/sym_def_app_icon" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_flujo"
+                android:layout_width="360dp"
+                android:layout_height="65dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="16dp"
                 android:gravity="center"
-                android:scaleX="1.8"
-                android:scaleY="1.8"
-                android:text="Magnetismo" />
+                android:text="Flujo Magnético" />
 
-            <ImageButton
-                android:id="@+id/imageButton2"
-                android:layout_width="35dp"
-                android:layout_height="116dp"
-                android:layout_weight="1"
-                android:contentDescription="Boton logo"
-                tools:srcCompat="@tools:sample/avatars" />
+            <Button
+                android:id="@+id/btn_ley_ampere"
+                android:layout_width="360dp"
+                android:layout_height="65dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center"
+                android:text="Ley Ampere" />
+
+            <Button
+                android:id="@+id/btn_formulas"
+                android:layout_width="360dp"
+                android:layout_height="65dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center"
+                android:text="Formulas" />
+
+            <Button
+                android:id="@+id/btn_fm_carga"
+                android:layout_width="360dp"
+                android:layout_height="65dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center"
+                android:text="Fuerza magnética en una carga" />
+
+            <Button
+                android:id="@+id/btn_fm_corriente"
+                android:layout_width="360dp"
+                android:layout_height="65dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center"
+                android:text="F. M sobre corriente en un campo B" />
+
+            <Button
+                android:id="@+id/btn_bobinas"
+                android:layout_width="360dp"
+                android:layout_height="65dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center"
+                android:text="Helm-Holtz" />
+
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btn_ley_ampere"
-            android:layout_width="360dp"
-            android:layout_height="65dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="Ley Ampere" />
-
-        <Button
-            android:id="@+id/btn_flujo"
-            android:layout_width="360dp"
-            android:layout_height="65dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="Flujo Magnético" />
-
-        <Button
-            android:id="@+id/btn_formulas"
-            android:layout_width="360dp"
-            android:layout_height="65dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="Formulas" />
-
-        <Button
-            android:id="@+id/btn_fm_carga"
-            android:layout_width="360dp"
-            android:layout_height="65dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="Fuerza magnética en una carga" />
-
-        <Button
-            android:id="@+id/btn_fm_corriente"
-            android:layout_width="360dp"
-            android:layout_height="65dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="F. M sobre corriente en un campo B" />
-
-        <Button
-            android:id="@+id/btn_ley_biotsavart"
-            android:layout_width="360dp"
-            android:layout_height="65dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="Ley Biot-Savart" />
-
-        <Button
-            android:id="@+id/btn_bobinas"
-            android:layout_width="360dp"
-            android:layout_height="65dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="center"
-            android:text="Helm-Holtz" />
-
-    </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
